feat: add dynamic trending search
